--- a/shop_goods.html
+++ b/shop_goods.html
@@ -1219,6 +1219,7 @@
         </ul>
     </footer>
     <!-- 底部模块 end -->
+    <script src="js/axios.js"></script>
     <script src="js/detail.js"></script>
 </body>
 
