--- a/shopcar.html
+++ b/shopcar.html
@@ -294,7 +294,7 @@
     <div class="c-container">
         <div class="car_w">
             <div class="cart-filter-bar">
-                <em>全部商品 <span class="shop_count">7</span></em>
+                <em>全部商品 <span class="shop_count"></span></em>
             </div>
             <!-- 购物车主要核心区域 -->
             <div class="cart-warp">
