--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script src="js/jquery-3.5.1.min.js"></script>
     <link rel="stylesheet" href="css/swiper-bundle.min.css">
     <link rel="stylesheet" href="css/index.css">
+    <script src="data.json"></script>
     
     <!-- <script src="js/scroll.js"></script> -->
     <title>jd.京东购物</title>
@@ -1816,18 +1817,18 @@
 
     <!-- 为你推荐 商品列表 start -->
     <div class="for_you_tab" style="display: block; ">
-        <ul class="for_you_goodslist w ">
-            <li>
+        <ul class="for_you_goodslist w">
+            <!-- <li>
                 <img src="uploads/shop_car/6.jpg" alt=" ">
-                <div class="goods_msg ">
+                <div class="goods_msg">
                     <h4 class="googs_title two_row ">
                         宝马BMW S1000RR 摩托车 鲁冰花蓝
                     </h4>
-                    <div class="price ">
+                    <div class="price">
                         <i>￥</i>298999.<i>00</i>
                     </div>
-                    <div class="lookfor_sim ">
-                        <div class="xiangsi ">加入购物车</div>
+                    <div class="lookfor_sim">
+                        <div class="xiangsi">加入购物车</div>
                     </div>
                 </div>
 
@@ -2116,7 +2117,7 @@
                     </div>
                 </div>
 
-            </li>
+            </li> -->
 
         </ul>
     </div>
@@ -3982,6 +3983,7 @@
     </script>
     <script src="js/axios.js"> </script>
     <script src="js/index.js"></script>
+    <script src="js/goods.js"></script>
 </body>
 
 </html>
