--- a/shop_goods.html
+++ b/shop_goods.html
@@ -416,118 +416,6 @@
         <div class="w1">
             <div class="nav_total">
                 <h2 class="red_bg total">查看全部商品</h2>
-                <div class="item_toatl_msg">
-                    <div class="item_menu">
-                        <div class="row">
-                            <h4>Mate系列</h4>
-                            <a href="javascript:;">华为 Mate40 Pro</a>
-                            <a href="javascript:;">华为 Mate40 Rs 保时捷设计</a>
-                            <a href="javascript:;">华为 Mate40 Pro+</a>
-                            <a href="javascript:;">华为 Mate 30E Pro 5G</a>
-                            <a href="javascript:;">华为 Mate 30 Pro</a>
-                        </div>
-                        <div class="row">
-                            <h4>P系列</h4>
-                            <a href="javascript:;">HUAWEI P40 Pro+</a>
-                            <a href="javascript:;">HUAWEI P40 Pro</a>
-                            <a href="javascript:;">HUAWEI P40</a>
-                            <a href="javascript:;">HUAWEI P30</a>
-                            <a href="javascript:;">HUAWEI P30 Pro</a>
-                        </div>
-                        <div class="row">
-                            <h4>nova/麦芒系列</h4>
-                            <a href="javascript:;">nova 7 Pro 5G</a>
-                            <a href="javascript:;">nova 7 5G</a>
-                            <a href="javascript:;">nova 7 SE 5G</a>
-                            <a href="javascript:;">nova 6 5G</a>
-                            <a href="javascript:;">nova 6</a>
-                            <a href="javascript:;">nova 6 SE</a>
-                            <a href="javascript:;">nova 5z</a>
-                            <a href="javascript:;">nova 5i pro</a>
-                            <a href="javascript:;">nova 5 pro</a>
-                            <a href="javascript:;">nova 5i</a>
-                        </div>
-                        <div class="row">
-                            <h4>麦芒9畅享系列</h4>
-                            <a href="javascript:;">畅享 20</a>
-                            <a href="javascript:;">畅享20 Plus</a>
-                            <a href="javascript:;">畅享 20Pro</a>
-                            <a href="javascript:;">畅享Z 5G</a>
-                            <a href="javascript:;">畅享 10e</a>
-                            <a href="javascript:;">畅享 10S</a>
-                            <a href="javascript:;">畅享10</a>
-                            <a href="javascript:;">畅享10 Plus</a>
-                        </div>
-                        <div class="row">
-                            <h4>智慧屏</h4>
-                            <a href="javascript:;">智慧屏S系列</a>
-                            <a href="javascript:;">智慧屏V65</a>
-                            <a href="javascript:;">智慧屏V75</a>
-                            <a href="javascript:;">智慧屏V55i</a>
-                            <a href="javascript:;">智慧屏X65</a>
-                            <a href="javascript:;">智慧屏SE系列</a>
-                        </div>
-                        <div class="row">
-                            <h4>显示器</h4>
-                            <a href="javascript:;">MateView</a>
-                            <a href="javascript:;">MateView GT</a>
-                            <a href="javascript:;">华为显示器23.8</a>
-                        </div>
-                        <div class="row">
-                            <h4>笔记本</h4>
-                            <a href="javascript:;">MateBook X</a>
-                            <a href="javascript:;">MateBook X Pro</a>
-                            <a href="javascript:;">MateBook D 15</a>
-                            <a href="javascript:;">MateBook D 14</a>
-                            <a href="javascript:;">MateBook 14</a>
-                            <a href="javascript:;">MateBook 13</a>
-                        </div>
-                        <div class="row">
-                            <h4>平板</h4>
-                            <a href="javascript:;">MatePad 10.8</a>
-                            <a href="javascript:;">MatePad 5G</a>
-                            <a href="javascript:;">MatePad</a>
-                            <a href="javascript:;"> Matepad Pro</a>
-                            <a href="javascript:;">畅享 2</a>
-                            <a href="javascript:;">平板M6 高能</a>
-                            <a href="javascript:;">平板M6 8.4</a>
-                        </div>
-                        <div class="row">
-                            <h4>路由器</h4>
-                            <a href="javascript:;">路由Q2 Pro</a>
-                            <a href="javascript:;">路由WS200四核版</a>
-                            <a href="javascript:;">路由WS200增强版</a>
-                            <a href="javascript:;">华为移动路由</a>
-                            <a href="javascript:;">路由 A2</a>
-                            <a href="javascript:;">路由WS5106</a>
-                            <a href="javascript:;">路由5G随行WiFi</a>
-                        </div>
-                        <div class="row">
-                            <h4>穿戴</h4>
-                            <a href="javascript:;">WATCH GT2</a>
-                            <a href="javascript:;">华为手环 B6</a>
-                            <a href="javascript:;">华为儿童手表 4X</a>
-                            <a href="javascript:;">华为手环4 Pro</a>
-                            <a href="javascript:;">华为手环3Pro</a>
-                            <a href="javascript:;">华为儿童手表3Pro</a>
-                            <a href="javascript:;">VR眼镜</a>
-                            <a href="javascript:;">WATCH GT 2e</a>
-                        </div>
-                        <div class="row">
-                            <h4>华为智选</h4>
-                            <a href="javascript:;">智能跑步机</a>
-                            <a href="javascript:;">车载智慧屏</a>
-                            <a href="javascript:;">华为AI音箱</a>
-                            <a href="javascript:;">空气净化器</a>
-                            <a href="javascript:;">智能台灯</a>
-                            <a href="javascript:;">智能牙刷</a>
-                            <a href="javascript:;">AI摄像头</a>
-                            <a href="javascript:;">安防套装</a>
-                            <a href="javascript:;">智能加湿器</a>
-                            <a href="javascript:;">香薰灯</a>
-                            <a href="javascript:;">保温水杯</a>
-                        </div>
-                    </div>
                 </div>
             </div>
         </div>
@@ -610,6 +498,140 @@
                 </div>
             </li>
         </ul>
+        <div class="item_toatl_msg">
+            <div class="item_menu">
+                <div class="row">
+                    <h4>首页</h4>
+                    <a href="javascript:;">空气净化器</a>
+                    <a href="javascript:;">智能台灯</a>
+                    <a href="javascript:;">智能牙刷</a>
+                    <a href="javascript:;">AI摄像头</a>
+                    <a href="javascript:;">安防套装</a>
+                    <a href="javascript:;">智能加湿器</a>
+                    <a href="javascript:;">香薰灯</a>
+                    <a href="javascript:;">保温水杯</a>
+                </div>
+
+                <div class="row" style="display: block;">
+                    <h4>P系列</h4>
+                    <a href="javascript:;">HUAWEI P40 Pro+</a>
+                    <a href="javascript:;">HUAWEI P40 Pro</a>
+                    <a href="javascript:;">HUAWEI P40</a>
+                    <a href="javascript:;">HUAWEI P30</a>
+                    <a href="javascript:;">HUAWEI P30 Pro</a>
+                </div>
+                <div class="row">
+                    <h4>Mate系列</h4>
+                    <a href="javascript:;">华为 Mate40 Pro</a>
+                    <a href="javascript:;">华为 Mate40 Rs 保时捷设计</a>
+                    <a href="javascript:;">华为 Mate40 Pro+</a>
+                    <a href="javascript:;">华为 Mate 30E Pro 5G</a>
+                    <a href="javascript:;">华为 Mate 30 Pro</a>
+                </div>
+                <div class="row">
+                    <h4>nova系列</h4>
+                    <a href="javascript:;">nova 7 Pro 5G</a>
+                    <a href="javascript:;">nova 7 5G</a>
+                    <a href="javascript:;">nova 7 SE 5G</a>
+                    <a href="javascript:;">nova 6 5G</a>
+                    <a href="javascript:;">nova 6</a>
+                    <a href="javascript:;">nova 6 SE</a>
+                    <a href="javascript:;">nova 5z</a>
+                    <a href="javascript:;">nova 5i pro</a>
+                    <a href="javascript:;">nova 5 pro</a>
+                    <a href="javascript:;">nova 5i</a>
+                </div>
+                <div class="row">
+                    <h4>麦芒9畅享系列</h4>
+                    <a href="javascript:;">畅享 20</a>
+                    <a href="javascript:;">畅享20 Plus</a>
+                    <a href="javascript:;">畅享 20Pro</a>
+                    <a href="javascript:;">畅享Z 5G</a>
+                    <a href="javascript:;">畅享 10e</a>
+                    <a href="javascript:;">畅享 10S</a>
+                    <a href="javascript:;">畅享10</a>
+                    <a href="javascript:;">畅享10 Plus</a>
+                </div>
+                <div class="row">
+                    <h4>智慧屏</h4>
+                    <a href="javascript:;">智慧屏S系列</a>
+                    <a href="javascript:;">智慧屏V65</a>
+                    <a href="javascript:;">智慧屏V75</a>
+                    <a href="javascript:;">智慧屏V55i</a>
+                    <a href="javascript:;">智慧屏X65</a>
+                    <a href="javascript:;">智慧屏SE系列</a>
+                </div>
+                <div class="row">
+                    <h4>显示器</h4>
+                    <a href="javascript:;">MateView</a>
+                    <a href="javascript:;">MateView GT</a>
+                    <a href="javascript:;">华为显示器23.8</a>
+                </div>
+                <div class="row">
+                    <h4>笔记本</h4>
+                    <a href="javascript:;">MateBook X</a>
+                    <a href="javascript:;">MateBook X Pro</a>
+                    <a href="javascript:;">MateBook D 15</a>
+                    <a href="javascript:;">MateBook D 14</a>
+                    <a href="javascript:;">MateBook 14</a>
+                    <a href="javascript:;">MateBook 13</a>
+                </div>
+                <div class="row">
+                    <h4>平板</h4>
+                    <a href="javascript:;">MatePad 10.8</a>
+                    <a href="javascript:;">MatePad 5G</a>
+                    <a href="javascript:;">MatePad</a>
+                    <a href="javascript:;"> Matepad Pro</a>
+                    <a href="javascript:;">畅享 2</a>
+                    <a href="javascript:;">平板M6 高能</a>
+                    <a href="javascript:;">平板M6 8.4</a>
+                </div>
+                <div class="row">
+                    <h4>路由器</h4>
+                    <a href="javascript:;">路由Q2 Pro</a>
+                    <a href="javascript:;">路由WS200四核版</a>
+                    <a href="javascript:;">路由WS200增强版</a>
+                    <a href="javascript:;">华为移动路由</a>
+                    <a href="javascript:;">路由 A2</a>
+                    <a href="javascript:;">路由WS5106</a>
+                    <a href="javascript:;">路由5G随行WiFi</a>
+                </div>
+                <div class="row">
+                    <h4>穿戴</h4>
+                    <a href="javascript:;">WATCH GT2</a>
+                    <a href="javascript:;">华为手环 B6</a>
+                    <a href="javascript:;">华为儿童手表 4X</a>
+                    <a href="javascript:;">华为手环4 Pro</a>
+                    <a href="javascript:;">华为手环3Pro</a>
+                    <a href="javascript:;">华为儿童手表3Pro</a>
+                    <a href="javascript:;">VR眼镜</a>
+                    <a href="javascript:;">WATCH GT 2e</a>
+                </div>
+
+                <div class="row">
+                    <h4>华为智选</h4>
+                    <a href="javascript:;">智能跑步机</a>
+                    <a href="javascript:;">车载智慧屏</a>
+                    <a href="javascript:;">华为AI音箱</a>
+                    <a href="javascript:;">空气净化器</a>
+                    <a href="javascript:;">智能台灯</a>
+                    <a href="javascript:;">智能牙刷</a>
+                    <a href="javascript:;">AI摄像头</a>
+                    <a href="javascript:;">安防套装</a>
+                    <a href="javascript:;">智能加湿器</a>
+                    <a href="javascript:;">香薰灯</a>
+                    <a href="javascript:;">保温水杯</a>
+                </div>
+                <div class="row">
+                    <h4>音频配件</h4>
+                    <a href="javascript:;">华为儿童手表 4X</a>
+                    <a href="javascript:;">华为手环4 Pro</a>
+                    <a href="javascript:;">华为手环3Pro</a>
+                    <a href="javascript:;">华为儿童手表3Pro</a>
+                    <a href="javascript:;">VR眼镜</a>
+                    <a href="javascript:;">WATCH GT 2e</a>
+                </div>
+            </div>
     </nav>
     <!-- 店铺导航tab栏 end -->
 
@@ -713,37 +735,38 @@
     <div class="product_details w">
         <div class="left">
             <div class="mid_photo">
-                <img src="images/shop_goods/product_details/mid/1.jpg" alt="" class="mid_img" style="display: block;">
-                <img src="images/shop_goods/product_details/mid/2.jpg" alt="" class="mid_img">
-                <img src="images/shop_goods/product_details/mid/3.jpg" alt="" class="mid_img">
-                <img src="images/shop_goods/product_details/mid/4.jpg" alt="" class="mid_img">
-                <img src="images/shop_goods/product_details/mid/5.jpg" alt="" class="mid_img">
-                <img src="images/shop_goods/product_details/mid/6.jpg" alt="" class="mid_img">
-                <img src="images/shop_goods/product_details/mid/7.jpg" alt="" class="mid_img">
-                <img src="images/shop_goods/product_details/mid/8.jpg" alt="" class="mid_img">
-                <img src="images/shop_goods/product_details/mid/9.jpg" alt="" class="mid_img">
-                <img src="images/shop_goods/product_details/mid/10.jpg" alt="" class="mid_img">
+                 <div style="display: block;"><img src="images/shop_goods/product_details/big/1.jpg" alt="" class="mid_img" ></div>
+                    <div><img src="images/shop_goods/product_details/big/2.jpg" alt="" class="mid_img"></div>
+                    <div><img src="images/shop_goods/product_details/big/3.jpg" alt="" class="mid_img"></div>
+                    <div><img src="images/shop_goods/product_details/big/4.jpg" alt="" class="mid_img"></div>
+                    <div><img src="images/shop_goods/product_details/big/5.jpg" alt="" class="mid_img"></div>
+                    <div><img src="images/shop_goods/product_details/big/6.jpg" alt="" class="mid_img"></div>
+                    <div><img src="images/shop_goods/product_details/big/7.jpg" alt="" class="mid_img"></div>
+                    <div><img src="images/shop_goods/product_details/big/8.jpg" alt="" class="mid_img"></div>
+                    <div><img src="images/shop_goods/product_details/big/9.jpg" alt="" class="mid_img"></div>
+                    <div><img src="images/shop_goods/product_details/big/10.jpg" alt="" class="mid_img"></div>
                 <div class="mask"></div>
                 <div class="fajing"></div>
                 <div class="big_photo">
-                    <img src="images/shop_goods/product_details/big/1.jpg" alt="" class="big_img" style="display: block;">
-                    <img src="images/shop_goods/product_details/big/2.jpg" alt="" class="big_img">
-                    <img src="images/shop_goods/product_details/big/3.jpg" alt="" class="big_img">
-                    <img src="images/shop_goods/product_details/big/4.jpg" alt="" class="big_img">
-                    <img src="images/shop_goods/product_details/big/5.jpg" alt="" class="big_img">
-                    <img src="images/shop_goods/product_details/big/6.jpg" alt="" class="big_img">
-                    <img src="images/shop_goods/product_details/big/7.jpg" alt="" class="big_img">
-                    <img src="images/shop_goods/product_details/big/8.jpg" alt="" class="big_img">
-                    <img src="images/shop_goods/product_details/big/9.jpg" alt="" class="big_img">
-                    <img src="images/shop_goods/product_details/big/10.jpg" alt="" class="big_img">
+                    <div class="showOut" style="display: block;"><img src="images/shop_goods/product_details/big/1.jpg" alt="" class="big_img" ></div>
+                    <div><img src="images/shop_goods/product_details/big/2.jpg" alt="" class="big_img"></div>
+                    <div><img src="images/shop_goods/product_details/big/3.jpg" alt="" class="big_img"></div>
+                    <div><img src="images/shop_goods/product_details/big/4.jpg" alt="" class="big_img"></div>
+                    <div><img src="images/shop_goods/product_details/big/5.jpg" alt="" class="big_img"></div>
+                    <div><img src="images/shop_goods/product_details/big/6.jpg" alt="" class="big_img"></div>
+                    <div><img src="images/shop_goods/product_details/big/7.jpg" alt="" class="big_img"></div>
+                    <div><img src="images/shop_goods/product_details/big/8.jpg" alt="" class="big_img"></div>
+                    <div><img src="images/shop_goods/product_details/big/9.jpg" alt="" class="big_img"></div>
+                    <div><img src="images/shop_goods/product_details/big/10.jpg" alt="" class="big_img"></div>
                 </div>
             </div>
+            
             <div class="preview_list">
                 <input type="button" value="" class="arrow_prev">
                 <ul class="list_item">
                     <div class="list_item_menu">
-                        <li class="tab_current">
-                            <img src="images/shop_goods/product_details/little/1.jpg" alt="">
+                        <li >
+                            <img src="images/shop_goods/product_details/little/1.jpg" alt="" class="tab_current">
                         </li>
                         <li>
                             <img src="images/shop_goods/product_details/little/2.jpg" alt="">
