--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
                 </ul>
             </div>
             <div class="shop_car">
-                <div class="num">6</div>
+                <div class="num"></div>
                 <span><a href="shopcar.html" class="red">我的购物车</a></span>
             </div>
         </div>
@@ -3964,7 +3964,7 @@
     </script>
     <script>
         (function() {
-            console.log(10);
+            // console.log(10);
             var swiper = new Swiper('.new_goods .swiper-container', {
                 slidesPerView: 2,
                 spaceBetween: 10,
