--- a/register.html
+++ b/register.html
@@ -35,9 +35,10 @@
                   <p class="tip tip4"><span></span></p>
                   
               </ul> 
-              <button>立即注册</button>
+              <button><a id= 'regis' href="#none">立即注册</a></button>
 
-           </form>          
+           </form>         
+           <!-- <a id='sb' href="#none">你好</a>  -->
             <ol>
                   <li><span class="people"></span>企业用户注册</li>
                   <li><span class="earth"></span>海外用户注册</li>
