--- a/shop_goods.html
+++ b/shop_goods.html
@@ -397,7 +397,7 @@
                 </ul>
             </div>
             <div class="shop_car">
-                <div class="num">6</div>
+                <div class="num"></div>
                 <span><a href="shopcar.html">我的购物车</a></span>
                 <span>&nbsp;&nbsp;&nbsp;&nbsp;&gt;</span>
             </div>
