--- a/login.html
+++ b/login.html
@@ -13,7 +13,6 @@
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/login.css">
-    <script src="js/jquery-3.5.1.min.js"></script>
 </head>
 
 <body>
@@ -80,10 +79,11 @@
                     <div class="zhanghu">
                         <input type="tel" name="" id="" class="tel" placeholder="邮箱/用户名/登陆手机">
                         <div class="tel_icon"></div>
+                        <p class="sign1">用户名</p>
                         <input type="password" name="" id="" class="password" placeholder="密码">
                         <div class="password_icon"></div>
                         <a href="javascript:;" class="forget_passeord">忘记密码</a>
-                        <button>登&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;录</button>
+                        <button><a id='login'>登&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;录</a></button>
                     </div>
                 </div>
                 <div class="bot">
