--- a/shopcar.html
+++ b/shopcar.html
@@ -68,8 +68,8 @@
                 </div>
             </div>
             <div class="login">
-                <a href="https://passport.jd.com/new/login.aspx?ReturnUrl=https%3A%2F%2Fwww.jd.com%2F" class="user_login">你好，请登录</a>
-                <a href="https://reg.jd.com/reg/person?ReturnUrl=https%3A//www.jd.com/" class="register red">&nbsp;&nbsp;免费注册</a>
+                <a href="login.html" class="user_login">你好，请登录</a>
+                <a href="register.html" class="register red">&nbsp;&nbsp;免费注册</a>
             </div>
             <ul class="user_tab_items">
                 <li class="shuxian">|</li>
