--- a/shopcar.html
+++ b/shopcar.html
@@ -68,8 +68,8 @@
                 </div>
             </div>
             <div class="login">
-                <a href="login.html" class="user_login">你好，请登录</a>
-                <a href="register.html" class="register red">&nbsp;&nbsp;免费注册</a>
+                <a href="#none" class="user_login">你好，请登录</a>
+                <a href="#none" class="register red">&nbsp;&nbsp;免费注册</a>
             </div>
             <ul class="user_tab_items">
                 <li class="shuxian">|</li>
